Committing the initial version of TinderTraveler2 - July 25

--- a/TinderTraveler2/TinderTraveler2-Info.plist
+++ b/TinderTraveler2/TinderTraveler2-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>ckomagan.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>ckomagan.$(PRODUCT_NAME:rfc1034identifier)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -20,8 +20,25 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>TinderTraveler2</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb727462217379696</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
+	<key>FacebookAppID</key>
+	<string>727462217379696</string>
+	<key>FacebookDisplayName</key>
+	<string>TinderTraveler2</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIMainStoryboardFile</key>
